[package]
name = "remctrl"
version = "0.1.0"
edition = "2021"

[lib]
name = "remctrl"
path = "src/lib.rs"

[[bin]]
name = "remctrl"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
mdns-sd = "0.11"
hostname = "0.3"
eframe = "0.29"
egui = "0.29"
